# jove

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  README.md  config.mk  target.mk  targets.mk  version.mk
.github/workflows/: CI.yml  ci.yml  runner-ip.yml
.old/: target.mk
.old/include/: coff_recompiler.h  recompiler.h  translate_ldst_template.h
.old/lib/: coff_binary.cpp  coff_recompiler.cpp  elf_relocs_mips.cpp  extllvm_ocaml.c  qemutcg.c
.old/lib/arch/: thunk_arm.c
.old/patches/: qemu.patch
.old/scripts/: viewbc
.old/tests/src/: librand.c
.old/tools/: abi_callingconv.c  obj2llvmdump.cpp  tcgglobals.c
Documentation/: .IDEAS  Building.md  Examples.md
abi/aarch64/: arch.callconv
abi/arm/: standard.callconv
abi/x86_64/: sysv.callconv
core/: B.cpp  B.h  add.cpp  add.h  addr2line.cpp  addr2line.h  afl_ipt.h  align.h  analyze.cpp  analyze.h  ansi.h  assert.h  autoreap.cpp  autoreap.h  binary.cpp  binary.h  block.cpp  brkpt.h  byval.cpp  byval.h  calls.cpp  calls.h  coff.cpp  coff.h  concurrent.h  cpu.cpp  cpu.h  crash.cpp  crash.h  crypto.cpp  crypto.h  death.cpp  disas.cpp  disas.h  eintr.h  elf.cpp  elf.h  emulate.cpp  emulate.h  except.cpp  (+115 more)
core/arch/aarch64/: emulate.cpp.inc
core/arch/i386/: emulate.cpp.inc
core/arch/mips32/: emulate.cpp.inc
core/arch/mips64/: emulate.cpp.inc
core/arch/mips64el/: emulate.cpp.inc
core/arch/mipsel/: emulate.cpp.inc
core/arch/x86_64/: emulate.cpp.inc
docker/: Dockerfile
docs/: regs
examples/: dump-linked-code.cpp  test.cpp  trans-block.cpp
include/: binary.h  coff_binary.h  coff_recompiler.h  elf_binary.h  elf_recompiler.h  ldst_template.h  mc.h  obj2llvmdump_c.h  qemutcg.h  recompiler.h  runtime_ldst_template.h  tcg-llvm.h  translate_ldst_template.h  translator.h  types.h
include/jove/: addr.h.inc  addr_intvl.h.inc  adjacency_list.h.inc  algo.h  assert.h  atomic.h  atomic.h.inc  constants.h  convenience.h.inc  deque.h.inc  host.h.inc  index.h.inc  ip.h  ip.h.inc  jove.h  macros.h  mt.h  mt.h.inc  nop.h.inc  objdump.h  objdump.h.inc  possibly_concurrent.h.inc  state.h  state.h.inc  table.h.inc  target.h.inc  tcg.h  tcgconstants-aarch64.h  tcgconstants-i386.h  tcgconstants-mips.h  tcgconstants-mips64.h  tcgconstants-mips64el.h  tcgconstants-mipsel.h  tcgconstants-x86_64.h  terminator.h.inc  types.h  verbose.h
lib/: analyze.hpp  asm-offsets.inc.h  asm-offsets.mk  augmented_raw_syscalls.h  coff_binary.cpp  common.h  dfsan.c  dfsan_hooks.inc.h  dump-vdso.c  elf.hpp  elf_binary.cpp  elf_recompiler.cpp  elf_relocs_aarch64.cpp  elf_relocs_arm.cpp  elf_relocs_mips.cpp  elf_relocs_x86_64.cpp  explore.hpp  extllvm.ml  extllvm_ocaml.c  extllvm_ocaml.cpp  gen-asm-offsets.h  jove.barrier.h  jove.c.inc  jove.common.c  jove.common.h  jove.constants.h  jove.hashtable.h  jove.llvm.c  jove.macros.h  jove.mutex.h  jove.options.h  jove.recover.c  jove.recover.c.inc  jove.recover.h  jove.stdlib.c.inc  jove.types.h  jove.util.c  jove.util.c.inc  jove_constants.h  jove_cos.c.inc  (+41 more)
lib/arch/: thunk_x86_64.c
lib/arch/aarch64/: LLVMGenInstrInfo.hpp  jove.c  (+18 more)
lib/jove-dyn/: preload.c
lib/windows/: apisetschema.spec.in
llknife/: CMakeLists.txt  llknife.cpp
old/: common.mk
old/docs/: sketch.md
old/include/: mc.h  types.h
old/lib/: elf_relocs_i386.cpp  extllvm.ml  ldst_helpers.c
old/tools/: llknife.ml  tcgdefs.c
patches/: boost-dynamic_bitset.diff  boost-graph.diff  boost-interprocess.diff  boost-serialization.diff  boost-stacktrace.diff  boost-unordered.diff  linux.diff  linux.patch  meson.diff  oneTBB.diff  qemu.patch  wine.diff  wine.patch  zlib.diff
scripts/: addrbits  build_qemu.sh  ci_build_carbon_copy.sh  ci_check.sh  ci_install.sh  cross_build.sh  cross_build_i386.sh  cross_build_mips.sh  cross_build_mips64el.sh  cross_build_mipsel.sh  gen-boost-patches.sh  gen_linux_copy.sh  is32  jove_unwind.py  regular_build.sh
scripts/bash-completion/: jove
scripts/ci/: build.sh  install.sh
scripts/gdb/: jove_trace.py  jove_unwind.py  set_regs_from_uctx_i386.py  trace_insns.py  wine_add_sym_files.py
scripts/ida/: jove_trace.py  jove_view_trace.py
scripts/lldb/: jove_trace.py  jove_trace_insns.py  jove_unwind.py  trace_insns.py  unwind.py
tests/: Makefile  run.py  tester.py
tests/inputs/: multi_threaded.inputs
tests/src/: complex-num-f.c  complex-num.c  complex_num.c  complex_num.inc  complex_num_d.c  complex_num_f.c  complex_num_i16.c  complex_num_i32.c  complex_num_i64.c  complex_num_i8.c  dlopen.c  errno.c  isspace.c  librand.bad.c  librand.h  longjmp.c  memcpy_overflow.c  multi_threaded.c  multi_threaded_simple.c  printf.c  returns_u64.c  stack_buffer_overrun.c  stds.c  time.c  vararg.c
tmp/: .gitignore  Makefile  jove.cpp  qemu  tcgcommon.cpp  tcgconstants.cpp  tcgdefs.cpp  tcgdump.cpp  x86_64.tcg.cpp  x86_64_tcg.cpp
tmp/include/: jove.h
tmp/lib/: sha3.hpp  tcgcommon.hpp
tmp/tests/: Makefile
tmp/tools/: gen-tcgconstants.cpp  jove-add.cpp  jove-dump.cpp  jove-dyn.cpp  jove-init.cpp  jove-llvm.cpp  jove.cpp  tcgconstants.cpp  tcgdefs.cpp  tcgdump.cpp  tcgglobals.cpp
tools/: CMakeLists.txt  abi_callingconv.c  check-helper.cpp  dump-vdso.cpp  gen-tcgconstants.cpp  jove-add.cpp  jove-addr2off.cpp  jove-analyze.cpp  jove-block.cpp  jove-bootstrap.cpp  jove-callstack.cpp  jove-cfg.cpp  jove-decompile.cpp  jove-dig.cpp  jove-dump.cpp  jove-dyn.cpp  jove-extract.cpp  jove-function.cpp  jove-ida.cpp  jove-init.cpp  jove-invalidate.cpp  jove-ipt.cpp  jove-llvm.cpp  jove-loop.cpp  jove-numbers.cpp  jove-observe.cpp  jove-off2addr.cpp  jove-readtrace.cpp  jove-recompile.cpp  jove-recover.cpp  jove-run.cpp  jove-sanity.cpp  jove-scan.cpp  jove-score.cpp  jove-serialize.cpp  jove-server.cpp  jove-stub.cpp  jove-trace.cpp  jove-trace2addrs.cpp  jove-trace2asm.cpp  (+18 more)
utilities/: dump-vdso.c  qemu-starter.c
utils/: check-helper.cpp  gen-tcgconstants.cpp  jove-cfg.cpp  jove-dump.cpp  jove-extract.cpp  jove-invalidate.cpp  jove-readtrace.cpp  jove-trace.cpp  jove-trace2addrs.cpp  jove-trace2asm.cpp  jove-trace2lines.cpp  jv2xml.cpp  read-vdso.cpp  tcgdump.cpp  tcgglobals.cpp
(+7963 files in other folders)
